refactor(echart, client): 移除 GL 关系图相关代码并简化文档
- 删除 `POST /api/tools/echart/graph-gl` 路由及相关处理逻辑
- 简化 ECharts MCP 客户端封装，移除对 `generate_graph_gl_chart` 的支持
- 更新 README 和系统设计文档，移除 GL 关系图相关内容
- 优化 `GraphEChartMCPTool` 类，移除冗余代码并改进参数处理
- 修正 `GraphEdge` 类中的值格式问题
- 更新 `GraphOption` 类，添加空检查以避免无效属性设置